--- a/DNS-gyro Testbench Interfacer/DNS-gyro Testbench Interfacer.csproj
+++ b/DNS-gyro Testbench Interfacer/DNS-gyro Testbench Interfacer.csproj
@@ -52,9 +52,14 @@
     <Compile Include="DNS-gyroTestbenchInterfacer.Designer.cs">
       <DependentUpon>DNS-gyroTestbenchInterfacer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Parser.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SERCOM.cs" />
+    <Compile Include="SERCOM.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <EmbeddedResource Include="DNS-gyroTestbenchInterfacer.resx">
       <DependentUpon>DNS-gyroTestbenchInterfacer.cs</DependentUpon>
     </EmbeddedResource>
